--- a/index.html
+++ b/index.html
@@ -30,16 +30,24 @@
 
 </head>
 <body>
-
+<a id="home"></a>
 <div class="header">
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href="" style="text-transform:none;">inHOUSE Film Festival</a>
-        <p class="">9th - 13th April 2014</p>
-
-        <ul>
-            <li class="pure-menu-selected"><a href="#">Home</a></li>
-            <li><a href="#contact-us">Contact & How to Find Us</a></li>
+        <a class="pure-menu-heading" href="" style="text-transform:none;">9th - 13th April 2014</a>
+        <ul> 
             <li><a href="#get-involved">Get Involved</a></li>
+        </ul>
+        <ul>     
+            <li><a href="#tickets">Tickets</a></li>
+            <li><a href="#contact-us">Contact & How to Find Us</a></li>
+        </ul>
+        <ul> 
+            <li><a href="#submissions">Submissions</a></li>
+            <li><a href="#programme">Programme</a></li>
+        </ul>
+        <ul>
+            <li class="pure-menu-selected"><a href="#home">Home</a></li>
+            <li><a href="#about-us">About Us</a></li>
         </ul>
     </div>
 </div>
@@ -47,13 +55,47 @@
 <div class="splash-container">
     <div class="splash">
         <h1 class="splash-head" style="text-transform:none;">inHOUSE Film Festival</h1>
-        <p class="splash-subhead">
-            a five day banquet for the senses with film at its heart. A visual feast combining music, fashion and art in the reclaimed and repurposed industrial spaces of Manor House.
-        </p>
+        <p class="splash-subhead">You are invited into the repurposed warehouses of Manor House for the very first inHOUSE Film Festival. Five days of Film, Music, Fashion and Art, celebrating the diverse artistic talent of the thriving local community and beyond.</p>
     </div>
 </div>
 
 <div class="content-wrapper">
+    <a id="tickets" class="anchor"></a>
+    <div class="ribbon l-box-lrg pure-g">
+        <div class="pure-u-1 pure-u-med-2-2 pure-u-lrg-5-5">
+            <h1 class="content-head content-head-ribbon">Tickets</h1>
+        </div>
+    </div>
+    <a id="about-us" class="anchor"></a>
+    <div class="content">
+        <h2 class="content-head is-center">About Us</h2>
+
+        <div class="pure-g">
+            <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4">
+                <p>inHOUSE Film Festival celebrates the creativity and diversity of Haringey and its residents through visual arts across multi-media platforms.</p>
+                <p>Our mission is to boost the profile of Haringey, through collaboration with the permanent residents, the influx of young professionals of the last decade and using our connections to encourage interaction with the wider arts and media world. Looking at urban and social transformation we showcase some of the best and most innovative short films, music and fashion videos.</p>
+                <p>Set in the ex-industrial area of Haringey, the most diverse borough of the city, inHOUSE Film Festival explores a new vision of co-existing between the thriving local artistic community and the long term residents, trying to understand the changes that are affecting our society, our community using arts as the main form of inspiration.</p>
+                <p>This inaugural year, the theme of the festival will be ‘Transformation’; through screenings, gigs, masterclasses and workshops, inHOUSE Film Festival nods towards the setting within a group of reappropriated industrial warehouses, initially created for industry, now housing a range of young, talented professionals, this expansive community is a hub for creativity and culture.</p>
+            </div>
+        </div>
+    </div>
+
+    <a id="programme" class="anchor"></a>
+    <div class="ribbon l-box-lrg pure-g">
+        <div class="pure-u-1 pure-u-med-2-2 pure-u-lrg-5-5">
+            <h1 class="content-head content-head-ribbon">Programme</h1>
+        </div>
+        <div class="pure-u-1 pure-u-med-1-3 pure-u-lrg-2-6">
+            <h2 class="content-head content-head-ribbon">fashion</h2>
+        </div>
+        <div class="pure-u-1 pure-u-med-1-3 pure-u-lrg-2-6">
+            <h2 class="content-head content-head-ribbon">music</h2>
+        </div>
+        <div class="pure-u-1 pure-u-med-1-3 pure-u-lrg-2-6">
+            <h2 class="content-head content-head-ribbon">live scores</h2>
+        </div>
+    </div>
+
     <a id="contact-us" class="anchor"></a>
     <div class="content">
         <h2 class="content-head is-center">Contact & How to Find Us</h2>
@@ -74,15 +116,19 @@
             </div>
         </div>
     </div>
-
+    <a id="submissions" class="anchor"></a>
     <div class="ribbon l-box-lrg pure-g">
-        <div class="l-box-lrg is-center pure-u-1 pure-u-med-1-2 pure-u-lrg-2-5">
-            
+        <div class="pure-u-1 pure-u-med-2-2 pure-u-lrg-5-5">
+            <h1 class="content-head content-head-ribbon">Submissions [£3]</h1>
         </div>
-        <div class="pure-u-1 pure-u-med-1-2 pure-u-lrg-3-5">
-
-            <h2 class="content-head content-head-ribbon">Submission Dates</h2>
-            <h3 class="content-head content-head-ribbon">10th February - 7th March</h3>
+        <div class="pure-u-1 pure-u-med-1-2 pure-u-lrg-2-5">
+            <p class="content-head content-head-ribbon">open Monday 10th Feb, closed 7th March</p>
+        </div>
+        <div class="pure-u-1 pure-u-med-1-2 pure-u-lrg-2-5">
+            <p class="content-head content-head-ribbon">Format: 20m inc credits, plus iHFF slide</p>
+        </div>
+        <div class="pure-u-1 pure-u-med-1-2 pure-u-lrg-1-5">
+            <p class="content-head content-head-ribbon">Music licensing</p>
         </div>
     </div>
 
