--- a/index.html
+++ b/index.html
@@ -101,17 +101,19 @@
         <h2 class="content-head is-center">Contact & How to Find Us</h2>
 
         <div class="pure-g">
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-2-4">
+            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
 
-                <h3 class="content-subhead">
+                <h3 class="content-subhead is-center">
                     <i class="fa fa-home"></i>
                     Manor House Warehouses, N15
                 </h3>
             </div>
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-2-4">
+            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-2-4 is-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2479.5786311351467!2d-0.0873086316533481!3d51.57595772000381!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4df9dbae493866af!2sCatwalk+Place!5e0!3m2!1sen!2suk!4v1391551604956" width="400" height="300" frameborder="0" style="border:0"></iframe>
+            </div>
+            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
                 <h3 class="content-subhead">
-                    <i class="fa fa-mobile"></i>
-                    Call Alay & Angelica on 07977 578 555
+                    Call Alay & Angelica<br /><i class="fa fa-mobile"></i>07977 578 555
                 </h3>
             </div>
         </div>
