--- a/index.html
+++ b/index.html
@@ -139,17 +139,20 @@
         <h2 class="content-head is-center">Get Involved</h2>
 
         <div class="pure-g">
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-2">
+            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
 
                 <h3 class="content-subhead">Contribute</h3>
-                <div>
+                <p>Email Alay at <a href="mailto:alay.paun@gmail.com">alay.paun@gmail.com</a></p>
+                <!--<div>
                   <script type="text/javascript"> id = 178834; </script>
                   <script type="text/javascript" src="http://kontactr.com/wp.js"></script>
-                </div>
+                </div>-->
             </div>
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-2">
+            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
                 <h3 class="content-subhead">Sponsorship, marketing and sales</h3>
                 <p>Call Alay on 07977 578 555</p>
+            </div>
+            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
                 <h3 class="content-subhead">Volunteer</h3>
                 <p>Email Angelica at <a href="mailto:angelica.riccardi@gmail.com">angelica.riccardi@gmail.com</a></p>
             </div>
