--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <a id="programme" class="anchor"></a>
-    <div class="ribbon l-box-lrg pure-g">
+    <div class="ribbon l-box-lrg pure-g gradient-ribbon">
         <div class="pure-u-1 pure-u-med-2-2 pure-u-lrg-5-5">
             <h1 class="content-head content-head-ribbon">Programme</h1>
         </div>
@@ -118,7 +118,7 @@
         </div>
     </div>
     <a id="submissions" class="anchor"></a>
-    <div class="ribbon l-box-lrg pure-g">
+    <div class="ribbon l-box-lrg pure-g gradient-ribbon">
         <div class="pure-u-1 pure-u-med-2-2 pure-u-lrg-5-5">
             <h1 class="content-head content-head-ribbon">Submissions [£3]</h1>
         </div>
