--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
 
     <div class="ribbon l-box-lrg pure-g gradient-ribbon"></div>
-    <!--<a id="tickets" class="anchor"></a>-->
+    <a id="tickets" class="anchor"></a>
     <div class="content">
         <h2 class="content-head is-center">Tickets</h2>
 
