--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="splash">
         <p class="splash-subhead">You are invited into the repurposed warehouses of Manor House for the very first inHOUSE Film Festival. Five days of Film, Music, Fashion and Art, celebrating the diverse artistic talent of the thriving local community and beyond.
         <br /><br /><br />
-        Come on in...</p>
+        Come on in...<a href="https://plus.google.com/108063886103746132137" rel="publisher">Google+</a></p>
     </div>
 </div>
 
@@ -181,7 +181,8 @@
     </div>
 
 </div>
-
+<!-- AddThisEvent -->
+<script type="text/javascript" src="http://js.addthisevent.com/atemay.js"></script>
 <script src="http://yui.yahooapis.com/3.14.1/build/yui/yui.js"></script>
 <script>
 YUI().use('node-base', 'node-event-delegate', function (Y) {
@@ -207,7 +208,6 @@ YUI({
     verticalMenu.show();
 
 });
-</script>
 </script>
 
 </body>
