--- a/index.html
+++ b/index.html
@@ -105,13 +105,15 @@
 
         <div class="pure-g">
             <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 is-center">
-                <p>£3</p>
-                <p>Guidelines</p>
-                <p>open Monday 10th Feb, closed 7th March</p>
-                <p>Format</p>
-                <p>20m inc credits, plus iHFF slide</p>
-                <p>Music licensing</p>
-                <p>Paypal Link</p>
+                <p>Please read the <a href="https://docs.google.com/document/d/1ekM__ykcbPpN4UH44G1_u3hBBKoYpS0qYW8V3Cx_aPg/edit?usp=sharing" target="_blank">guidelines</a>, complete the <a href="https://docs.google.com/forms/d/1WE49MCeM6at-uHhjt6ffmHuXOm-NQua9M-h21ybF8tc/edit?usp=sharing" target="_blank">submission form</a>, then click below to pay the £3 submission fee</p>
+            </div>
+            <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 is-center">
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="74K56KFPD6R4A">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+                </form>
             </div>
         </div>
     </div>
