--- a/index.html
+++ b/index.html
@@ -59,15 +59,19 @@
     </ul>
 </div>
 
-<div class="splash-container">
-    <div class="splash">
-        <p class="splash-subhead">You are invited into the repurposed warehouses of Manor House for the very first inHOUSE Film Festival. Five days of Film, Music, Fashion and Art, celebrating the diverse artistic talent of the thriving local community and beyond.
-        <br /><br /><br />
-        Come on in...</p>
+<div id="content" class="content-wrapper"> 
+    <div class="content">
+        <div class="home-content pure-g">
+            <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 centered-text">
+                <p>
+                    <iframe src="//player.vimeo.com/video/87138062?title=0&amp;byline=0&amp;portrait=0&amp;badge=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </p>
+                <p class="home-subtitle">You are invited into the repurposed warehouses of Manor House for the very first inHOUSE Film Festival. Five days of Film, Music, Fashion and Art, celebrating the diverse artistic talent of the thriving local community and beyond.
+                <br /><br />
+                Come on in...</p>
+            </div>
+        </div>
     </div>
-</div>
-
-<div id="content" class="content-wrapper">
     <img src="/img/banner-1.jpg" class="banner" />
     <a id="about-us" class="anchor"></a>
     <div class="content">
