--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 
     <title>inHOUSE Film Festival</title>
 
-<link rel="stylesheet" href="/css/pure-min.css">
+<link rel="stylesheet" href="css/pure-min.css">
 
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/main-grid-old-ie.css">
     <![endif]-->
     <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="/css/main-grid.css">
+        <link rel="stylesheet" href="css/main-grid.css">
     <!--<![endif]-->
   
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/layouts/marketing-old-ie.css">
     <![endif]-->
     <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="/css/layouts/marketing.css">
-        <link rel="stylesheet" href="/css/custom.css">
+        <link rel="stylesheet" href="css/layouts/marketing.css">
+        <link rel="stylesheet" href="css/custom.css">
     <!--<![endif]-->
   
 
@@ -47,7 +47,7 @@
     </div>
 </div>
 <div id="sidebar-menu" class="pure-menu pure-menu-open pure-menu-fixed">
-    <img class="logo" src="/img/inhouse-logo.jpg" />
+    <img class="logo" src="img/inhouse-logo.jpg" />
     <ul id="std-menu-items">
         <li class="pure-menu-selected"><a href="#home">Home</a></li>
         <li><a href="#about-us">About Us</a></li>
@@ -64,7 +64,7 @@
         <div class="home-content pure-g">
             <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 centered-text">
                 <p>
-                    <iframe src="//player.vimeo.com/video/87138062?title=0&amp;byline=0&amp;portrait=0&amp;badge=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <iframe src="/player.vimeo.com/video/87138062?title=0&amp;byline=0&amp;portrait=0&amp;badge=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </p>
                 <p class="home-subtitle">You are invited into the repurposed warehouses of Manor House for the very first inHOUSE Film Festival. Five days of Film, Music, Fashion and Art, celebrating the diverse artistic talent of the thriving local community and beyond.
                 <br /><br />
@@ -93,14 +93,14 @@
         </div>
         <div class="about-content pure-g" data-content="who">
             <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 is-center">
-                <img class="team-pic" src="/img/alay.jpg"/>
-                <img class="team-pic" src="/img/cathleen.jpg"/>
-                <img class="team-pic" src="/img/angelica.jpg"/>
-                <img class="team-pic" src="/img/agnes.jpg"/>
-                <img class="team-pic" src="/img/douglas.jpg"/>
+                <img class="team-pic" src="img/alay.jpg"/>
+                <img class="team-pic" src="img/cathleen.jpg"/>
+                <img class="team-pic" src="img/angelica.jpg"/>
+                <img class="team-pic" src="img/agnes.jpg"/>
+                <img class="team-pic" src="img/douglas.jpg"/>
                 <br />
                 <a href="http://about.me/inhousefilmfestival" style="text-decoration: none; margin: 0 auto;">
-                    <img src="/img/aboutme.png" />
+                    <img src="img/aboutme.png" />
                 </a>
             </div>
         </div>
@@ -138,19 +138,10 @@
         </div>
         <div data-content="submissions" class="get-involved-content pure-g" style="display: block;">
             <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text">
-                <p><a href="https://docs.google.com/forms/d/1WE49MCeM6at-uHhjt6ffmHuXOm-NQua9M-h21ybF8tc/edit?usp=sharing" target="_blank">Submissions</a> are NOW OPEN! Deadline is March 31st.</p>
-                <p>We will email confirmation that we have received your film, and guarantee to watch every one and let successful submissions know as soon as possible. You can submit via the following formats: DVD or digital file.</p>
-                <p>Successful films will need to be resent in H264 format, which can be sent via WeTransfer (or similar) or sent on a thumb drive. Please note that we cannot return thumb drives unless you include a stamped, self-addressed envelope with your submission.</p>
-                <p>Please read the <a href="https://docs.google.com/document/d/1ekM__ykcbPpN4UH44G1_u3hBBKoYpS0qYW8V3Cx_aPg/edit?usp=sharing" target="_blank">guidelines</a>, complete the <a href="https://docs.google.com/forms/d/1WE49MCeM6at-uHhjt6ffmHuXOm-NQua9M-h21ybF8tc/edit?usp=sharing" target="_blank">submission form</a>, then click below to pay the £3 submission fee</p>
+                <p>Submissions for inHOUSE Film Festival 2014 are now closed!</p>
+                <p>Thanks to everyone who submitted, you've kept us all very busy watching them all. And its been an absolute pleasure, the quality is high and we can't wait to see the chosen films up on the big screen.</p><p> All entrants will be notified asap either way and invited along to the launch night whether your film has been selected or not.</p><p> See you on the 9th!</p>
             </div>
-            <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 is-center">
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="74K56KFPD6R4A">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-                </form>
-            </div>
+            
         </div>
         <div data-content="contributor" class="get-involved-content pure-g">
             <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text">
@@ -198,7 +189,12 @@
                 <p>Watch this space...</p>
             </div>
             <div data-content="thu" class="programme-content l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 is-center">
-                <p>TBA</p>
+                <p>18.00 - Doors and DJs</br>
+                19.00 - Fashion inHOUSE! - screenings featuring local filmmakers from the warehouse communities</br>
+                19.30 - Fashion Documentary Screenings</br>
+                20.00 - Catwalk Show featuring designers and performers - Sanctus, Delia Fiori and Wandering Wardrobe among others</br>
+                21.00 - Fashion NOW - screenings of a variety of filmmakers from London, UK and International</br>
+                22.15 - Live Band Performance (TBA)</p>
             </div>
             <div data-content="fri" class="programme-content l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 is-center">
                 <p>TBA</p>
@@ -241,7 +237,7 @@
     <div class="content">
         <h2 class="content-head is-center">Gallery</h2>
         <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text">
-            <p><img src="/img/poster.jpg" style="width: 100%"></p>
+            <p><img src="img/poster.jpg" style="width: 100%"></p>
         </div>
     </div>
 
@@ -257,22 +253,29 @@
             </ul>
         </div>
         <div data-content="partner" class="credits-content l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text" style="display: block;">
+            <h4>Haringey Arts</h4>
+            <p><img src="img/haringey-arts-logo.png" style="width: 100px; float: left; margin: 0 5px 5px 0">
+            A support fund set up in collaborations between Haringey Arts and the Landlord of warehouse living on Overbury Road, Catwalk Place and Arena. The in-kind and financial investment supports residents living in this cluster of warehouses to create new collaborations, events and initiatives that benefit both the warehouse community and the wider community within Haringey. To find out more visit <a href="//haringeyarts.com" target="_blank">www.haringeyarts.com</a></p>
             <h4>West Creative</h4>
-            <p>West Creative bridges a gap between creativity and business. To date they have supported 75 creative professionals to win more work, build up networks and get their head around business planning…all for free through funded programme for people based in London. Find out how you can benefit here <a href="//westcreative.co/funded-business-support" target="_blank">westcreative.co</a></p>
+            <p><img src="img/west-creative-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">
+            West Creative bridges a gap between creativity and business. To date they have supported 75 creative professionals to win more work, build up networks and get their head around business planning…all for free through funded programme for people based in London. Find out how you can benefit here <a href="//westcreative.co/funded-business-support" target="_blank">westcreative.co</a></p>
             <h4>New River Studios</h4>
-            <p>New River Studios is a north London studio complex offering private spaces, music rehearsal and recording, film and video studios, hot-desking, cafe and gallery. <a href="//www.newriverstudios.com">newriverstudios.com</a></p>
+            <p><img src="img/new-river-studios-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">New River Studios is a north London studio complex offering private spaces, music rehearsal and recording, film and video studios, hot-desking, cafe and gallery. <a href="//www.newriverstudios.com">newriverstudios.com</a></p></br>
             <h4>The Lost Picture Show</h4>
-            <p>The Lost Picture Show aim to revive the magic and romance of “going to the pictures” through creating immersive, spectacular cinema events. They have taken their show to the mud-splattered fields of Glastonbury, The Big Chill and Shambala festivals, to film festivals, and to various rooftops, basements, bunkers and public spaces across London and further afield. <a href="//lostpictureshow.org" target="_blank">lostpictureshow.org</a></p>
+            <p><img src="img/lps-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">The Lost Picture Show aim to revive the magic and romance of “going to the pictures” through creating immersive, spectacular cinema events. They have taken their show to the mud-splattered fields of Glastonbury, The Big Chill and Shambala festivals, to film festivals, and to various rooftops, basements, bunkers and public spaces across London and further afield. <a href="//lostpictureshow.org" target="_blank">lostpictureshow.org</a></p>
             <h4>No/Gloss Film Festival</h4>
-            <p>No/Gloss Film Festival is Leeds' independent film festival, the city's first ever DIY film festival celebrating do-it-yourself unconventional cinema and low / no budget films from independent local and international film-makers. <a href="//noglossfilmfestival.co.uk" target="_blank">noglossfilmfestival.co.uk</a></p>
+            <p><img src="img/nogloss-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">No/Gloss Film Festival is Leeds' independent film festival, the city's first ever DIY film festival celebrating do-it-yourself unconventional cinema and low / no budget films from independent local and international film-makers. <a href="//noglossfilmfestival.co.uk" target="_blank">noglossfilmfestival.co.uk</a></p>
             <h4>London Photo Festival</h4>
-            <p>
+            <p><img src="img/london-photo-festival-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">
             Are you passionate about photography? We created the London Photo Festival in 2011 to showcase up and coming talent like yours. The principle behind the LPF is we don't evaluate your images. It's what sets us apart from other exhibitions, festivals and galleries <a href="//londonphotofestival.org" target="_blank">londonphotofestival.org</a>
             </p>
             <h4>LSFF</h4>
-            <p>LSFF is an annual event that presents the best in UK short film-making talent. For a couple of weeks in January we take over London's best independent cinemas and venues to showcase some amazing short films. Oh, and we throw in a bunch of live music and parties too. So let's get to know each other — come find us on <a href="//facebook.com/londonshortfilmfestival" target="_blank">Facebook</a> or follow us on <a href="//twitter.com/#!/LSFF" target="_blank">Twitter</a>.</p>
+            <p><img src="img/lsff-logo.jpeg" style="width: 100px; float: left; margin: 0 5px 5px 0">LSFF is an annual event that presents the best in UK short film-making talent. For a couple of weeks in January we take over London's best independent cinemas and venues to showcase some amazing short films. Oh, and we throw in a bunch of live music and parties too. So let's get to know each other — come find us on <a href="//facebook.com/londonshortfilmfestival" target="_blank">Facebook</a> or follow us on <a href="//twitter.com/#!/LSFF" target="_blank">Twitter</a>.</p>
             <h4>Catwalk Collective</h4>
-            <p>The Catwalk Collective build collaborative events powered by the boundless enthusiasm of our volunteers and fuelled by the maelstrom of ideas that the Manor House Warehouse Community generates. Our aim is to bring these talents to the surface for the benefit of our members and the enjoyment of everyone. <a href="facebook.com/CatwalkCollective" target="_blank">facebook.com/CatwalkCollective</a></p>
+            <p><img src="img/catwalk-collective-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">The Catwalk Collective build collaborative events powered by the boundless enthusiasm of our volunteers and fuelled by the maelstrom of ideas that the Manor House Warehouse Community generates. Our aim is to bring these talents to the surface for the benefit of our members and the enjoyment of everyone. <a href="facebook.com/CatwalkCollective" target="_blank">facebook.com/CatwalkCollective</a></p>
+            <h4>Starlight Design</h4>
+            <p><img src="img/starlight-design-logo.gif" style="width: 100px; float: left; margin: 0 5px 5px 0">
+            We are an event production company with over 30 years experience of creating events that go beyond spectacular. Specialising in set design, lighting, sound, AV, fireworks, power distribution and event production using the very latest technology with our own blend of creative input and experience to guarantee results that exceed our client's expectations.<a href="//starlightdesign.co.uk/" target="_blank">www.starlightdesign.co.uk/</a></p>
         </div>
         <div data-content="contributor" class="credits-content l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text">
             <h4>Design Team</h4>
@@ -284,20 +287,28 @@
             <p><span class="contributor-team-member">Agnes Bataclan</span><br />Professional fashion photographer turned Catwalk extraordinaire. <a href="http://www.agnesbataclan.com">agnesbataclan.com</a>
             <p><span class="contributor-team-member">Clarice Rebecca Buck</span><br />Designer at Sweet'n'Twisted <a href="https://facebook.com/sweettwisted">facebook.com/sweettwisted</a></p>
             <p><span class="contributor-team-member">Polina Schadauer-Povarich</span><br />POLOSOPHIA is a London-anchored hub of narrative post-minimalism, expressed sartorially. The brand was launched in 2013 by Polina Schadauer-Povarich. <a href="//polosophia.com" target="_blank">polosophia.com</a></p>
+            <p><span class="contributor-team-member">Lauren Taylor</span><br />Dancer/choreographer extraordinaire</p>
 </p>
         </div>
         <div data-content="production" class="credits-content l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text">
-            <h4></h4>
-            <p></p>
-            <h4></h4>
-            <p></p>
+            <h4>Production Team</h4>
+            <p><span class="contributor-team-member">Director</span><br />Alay Paun</p>
+            <p><span class="contributor-team-member">Producer</span><br />Douglas Cox</p>
+            <p><span class="contributor-team-member">Industry Team</span><br />Giorgio Bosisio, Muffin Hix</p>
+            <p><span class="contributor-team-member">Programming</span><br />Angelica Riccardi, Cathleen Tanti, Camilla Webster, Reka Punkosti, Ling Lee, Giorgio Bosisio</p>
+            <p><span class="contributor-team-member">Operations</span><br />Louisa Kearney, Josh Bright, Aidan Corcoran, Sandra Spighel</p>
+            <p><span class="contributor-team-member">Exhibitions</span><br />Shelley jones, Camilla Webster</p>
+            <p><span class="contributor-team-member">Visuals</span><br />Rob Adlington <a href="//lookingsound.com" target="_blank">Looking Sound</a></p>
+            
         </div>
     </div>
 
     <hr class="banner-3" />
     <a id="tickets" class="anchor"></a>
-    <div class="content">
+    <div class="content l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text">
         <h2 class="content-head is-center">Tickets</h2>
+        <p>The festival runs for 5 days. You can buy a pass for individual days or for the whole shebang.</br></br> 
+        Wednesday is Launch night, and will be a big party for guests and contributors, industry folk and festival pass holders. With bands, films, booze and some other cool stuff its a big welcome to our little festival.</br></br>Thursday is Fashion day, Friday Music, and Saturday has a whole raft of goodies to keep you entertained, not least of which is wrap party.</br></br>Sunday is a day of curated sessions with friends and familiars taking over and hosting their own piece of the action.</p>
 
         <div class="pure-g">
             <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 is-center">
@@ -309,7 +320,6 @@
                     <p>
                         <select name="os0">
                             <option value="Festival pass">Festival pass £10.00 GBP</option>
-                            <option value="Opening Night">Opening Night £3.00 GBP</option>
                             <option value="Day pass - THU">Day pass - THU £3.00 GBP</option>
                             <option value="Day pass - FRI">Day pass - FRI £3.00 GBP</option>
                             <option value="Day pass - SAT">Day pass - SAT £3.00 GBP</option>
@@ -331,9 +341,9 @@
 
 </div>
 <!-- AddThisEvent -->
-<script type="text/javascript" src="/js/atemay.js"></script>
-<script src="/js/jquery.min.js"></script>
-<script src="/js/yui.js"></script>
+<script type="text/javascript" src="js/atemay.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/yui.js"></script>
 <script>
 YUI().use('node-base', 'node-event-delegate', function (Y) {
     // This just makes sure that the href="#" attached to the <a> elements
@@ -359,8 +369,8 @@ YUI({
 
 });
 </script>
-<script src="/js/jquery.scrollto.min.js"></script>
-<script src="/js/jquery.localscroll.js"></script>
-<script src="/js/ihff.js"></script>
+<script src="js/jquery.scrollto.min.js"></script>
+<script src="js/jquery.localscroll.js"></script>
+<script src="js/ihff.js"></script>
 </body>
 </html>
